[dyad] Implementing the crawl job API endpoint - wrote 3 file(s) + extra files edited outside of Dyad
